# FIRA-vision-framework

./: Ball.cpp  Ball.h  CMakeLists.txt  Environment.cpp  Environment.h  OpponentRobot.cpp  OpponentRobot.h  README.md  Robot.cpp  Robot.h  Ximea.cpp  Ximea.h  arena.cpp  arena.h  colors.cpp  colors.h  contours.cpp  contours.h  geometry.cpp  geometry.h  main.cpp  velocity_model.cpp
calibrator/: calibrator.cpp  calibrator_hardcode.cpp
